引入router-view name,改写编辑页

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <!--<link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">-->
-    <title>blog</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="favicon.png" type="image/png">
+    <title>不如吃茶去</title>
   </head>
   <body>
     <div id="app"></div>
